- a bug with P4A_DB_Source::getPkRow() and table alias was solved
- a bug with multiple output buffers and raiseXMLresponse() was solved (thanks to eddiejr)
- Zend Framework was updated to 1.12.3
- A new status bar is added to the masks
- A multivalue bug with saveRow and data refresh is solved
- a missing property in "multicheckbox" field type was added

3.8.4
- "meta viewport" tag was added to mask's HTML for a better mobile rendering
- P4A::getMetaViewport() and setMetaViewport() methods were added
- p4a_center_elements() javascript funcion now removes marginLeft/paddingLeft
  from the first visible column of the first P4A_Frame widget
- a bug with P4A_Frame and multiple CSS classes was solved
- P4A_Table's arrow symbols were because the past ones weren't shown on mobile
  devices
- an ob_clean() call was added to P4A_Thumbnail_Generator::outputThumbnail()
  method
- Zend Framework was updated to 1.11.10
- P4A_Table's image cols do not throw exception anymore if the image
  does not exist
- P4A_Field_loadSelectByArray helper now supports a second parameter to specify
  the array's primary key field name
- a bug with P4A_DB_Source strings primary keys escaping was solved

3.8.3
- P4A_DB_Navigator now supports query defined sources
- a bug with P4A_Data_Source::saveUploads() was solved
- a bug with P4A_Table's image cols (without GD installed) was solved
- P4A_DB_Navigator now triggers a beforeclick event
- all p4a_load_js calls were migrated to require.js
- a bug with P4A_DB_Source::deleteRow() called when in newRow state was solved
- p4a_ajax_enable javascript function was added
- a bug with P4A_GD constant default definition was solved
- P4A_Mask::restart() method was added
- Zend Framework was updated to 1.11.7
- translations were updated
- P4A_DB_Source::load() method now checks for duplicate calls and throws an error

3.8.2
- Zend Framework was updated to 1.11.6
- CKEditor was updated to 3.6.0
- jQuery UI was updated to 1.8.11
- requirejs was added